--- a/companywebsite/static/home.html
+++ b/companywebsite/static/home.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>EduSoft Private Limited</title>
+    <title>Ktm Private Limited</title>
     <link rel="stylesheet" href="./css/layout.css" />
     <link rel="icon" href="./img/icon.png" type="image/x-icon" />
   </head>
 
   <body>
     <div class="container">
-      <div class="banner">EduSoft Private Limited.</div>
+      <div class="banner">Ktm Private Limited.</div>
       <div class="menu">
         <div class="menuitemselected"><a href="/static/home.html">Home</a></div>
         <div class="menuitem"><a href="/static/products.html">Products</a></div>
-        <div class="menuitem"><a>People</a></div>
-        <div class="menuitem"><a>Contact Us</a></div>
+        <div class="menuitem"><a href="/static/products.html">People</a></div>
+        <div class="menuitem"><a href="/static/products.html">Contact Us</a></div>
       </div>
       <div class="content">
         <div class="homecontent">
           <h1>About Us</h1>
           <img src="./img/building.png" alt="Building" />
           <div class="contenttext">
-            At Tally, we believe in the power of technology to make business
-            owners efficient, empowered and happier, so they can focus on what
-            matters most for their business. We design our products to focus on
-            just that to make our products work for you, and not the other way
-            around.
+            KTM bikes is the first name that comes to mind when it comes to off-road bikes.
+            KTM AG, formerly known as KTM Sportmotorcycle AG, is renowned for manufacturing
+            the enduro, motocross and supermoto bikes. KTM AG is an Austrian company
+            manufacturing off-road bikes and sports cars. This company has an Indian 
+            connection with Bajaj Auto having a substantial share in the ownership.
+            These bikes are extremely popular among the younger generation as they
+            classify as adventure bikes in many ways.
             <br />
-            Our new product TallyPrime takes this to a new level, making your
-            start to automation, or your switch to Tally simpler than ever
-            before. You can now discover the product much more easily and make
-            the product do more for you, without learning anything new. There is
-            greater flexibility as the product adapts to your business and your
-            way of working. And the transformed look and feel will only make you
-            love the product even more.
+            The illustrated vehicles may vary in selected details from the production
+            models and some illustrations feature optional equipment available at
+            additional cost. All information concerning the scope of supply, appearance,
+            services, dimensions and weights is non-binding and specified with the 
+            proviso that errors, for instance in printing, setting and/or typing, 
+            may occur; such information is subject to change without notice. 
+            Please note that model specifications may vary from country to country.
+            In the case of coated surfaces, there may be color differences due to
+            the usual process fluctuations. The consumption values stated refer 
+            to the roadworthy series condition of the vehicles at the time of
+            factory delivery.
             <ul>
-              <li>Simple to learn, easier to use</li>
-              <li>Insightful , actionable & customizable reports</li>
-              <li>Anywhere, anytime and secure access</li>
+              <li>Get Ready to Race.</li>
             </ul>
           </div>
         </div>
       </div>
       <div class="footer">
-        Copyright &#169; 2021 EduSoft Private Limited, Developed by Obed Otto.
+        Copyright &#169; 2021 Ktm Private Limited, Developed by kathirvel.
       </div>
     </div>
   </body>
