--- a/companywebsite/static/products.html
+++ b/companywebsite/static/products.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>EduSoft Private Limited</title>
+    <title>Ktm Private Limited</title>
     <link rel="stylesheet" href="./css/layout.css" />
     <link rel="icon" href="./img/icon.png" type="image/x-icon" />
   </head>
 
   <body>
     <div class="container">
-      <div class="banner">EduSoft Private Limited.</div>
+      <div class="banner">Ktm Private Limited.</div>
       <div class="menu">
         <div class="menuitem"><a href="/static/home.html">Home</a></div>
         <div class="menuitemselected">
@@ -35,11 +35,76 @@
                   <div class="itemname">Tally Silver</div>
                   <div class="itemprice">Price: Rs.10,000.00 </div>
               </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/tally_gold.png" alt="product image">
+                </div>
+                <div class="itemname">Tally Gold</div>
+                <div class="itemprice">Price: Rs.40,000.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/tally_gold.png" alt="product image">
+                </div>
+                <div class="itemname">Tally Gold</div>
+                <div class="itemprice">Price: Rs.40,000.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/tally_gold.png" alt="product image">
+                </div>
+                <div class="itemname">Tally Gold</div>
+                <div class="itemprice">Price: Rs.40,000.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/tally_gold.png" alt="product image">
+                </div>
+                <div class="itemname">Tally Gold</div>
+                <div class="itemprice">Price: Rs.40,000.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/tally_gold.png" alt="product image">
+                </div>
+                <div class="itemname">Tally Gold</div>
+                <div class="itemprice">Price: Rs.40,000.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/tally_gold.png" alt="product image">
+                </div>
+                <div class="itemname">Tally Gold</div>
+                <div class="itemprice">Price: Rs.40,000.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/tally_gold.png" alt="product image">
+                </div>
+                <div class="itemname">Tally Gold</div>
+                <div class="itemprice">Price: Rs.40,000.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/tally_gold.png" alt="product image">
+                </div>
+                <div class="itemname">Tally Gold</div>
+                <div class="itemprice">Price: Rs.40,000.00 </div>
+              </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/tally_gold.png" alt="product image">
+                </div>
+                <div class="itemname">Tally Gold</div>
+                <div class="itemprice">Price: Rs.40,000.00 </div>
+              </div>
+
+
           </div>
           </div>        
       </div>
       <div class="footer">
-        Copyright &#169; 2021 EduSoft Private Limited, Developed by Obed Otto.
+        Copyright &#169; 2021 Ktm Private Limited, Developed by kathirvel.
       </div>
     </div>
   </body>
